# worldcup-heritage

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
_config/: architecture-principles.md  coding-standards.md  tech-stack.md
artifacts/: 2026_matches.json  2026_matches_raw.json  groups.json
artifacts/predictions/: 2026_predictions_xgboost_v1_tuned.json  elo_form_values.json  tournament_simulation_xgboost_v1_tuned.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: init.sql
backend/src/: db.rs  main.rs  poller.rs
backend/src/models/: groups.rs  match_model.rs  mod.rs  prediction.rs  team.rs
backend/src/routes/: groups.rs  health.rs  matches.rs  mod.rs  predictions.rs  reload.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.css  App.tsx
pipeline/: .env.example  Dockerfile  requirements.txt
pipeline/data_ingestion/: fetch_data.py
pipeline/feature_engineering/: build_features.py  elo.py
pipeline/model_training/: train.py
pipeline/prediction/: predict.py
pipeline/scripts/: check_ko.py  check_preds.py  verify_data.py
scripts/: download_flags.py  extract_logos.py  find_logos.py  map_groups.py  save_groups.py
setup/: questionnaire.md
sidecar/: Dockerfile  check_ids.py  poller.py  test_poller.py
stages/01_planning/: CONTEXT.md
stages/02_research/: CONTEXT.md
stages/03_architecture/: CONTEXT.md
stages/04_implementation/: CONTEXT.md
stages/05_testing/: CONTEXT.md
stages/06_review/: CONTEXT.md
stages/07_deployment/: CONTEXT.md
(+22 files in other folders)
