[package]
name = "worldcup-heritage-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
